| Summary: | ASTERISK-26216: res_fax: Deadlock when detect fax while channel executing Playback | ||
| Reporter: | Richard Mudgett (rmudgett) | Labels: | |
| Date Opened: | 2016-07-19 12:51:18 | Date Closed: | 2016-07-21 19:28:36 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_dahdi Channels/chan_pjsip Channels/chan_sip/General Resources/res_fax |
| Versions: | 13.9.1 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | chan_dahdi, chan_pjsip, chan_sip, and FAXOPT(faxdetect) can all deadlock if the channel is executing the Playback or similar dialplan application that results in a masquerade being necessary to redirect to the fax extension when a fax is detected. The ast_async_goto() function explicitly documents that the channel lock cannot be held when calling for this very reason. | ||
| Comments: | By: David Brillert (aragon) 2016-07-19 16:10:22.202-0500 Richard are you focusing efforts on removing fax deadlocks from chan_sip? I have an open bug report ASTERISK-24822 and was wondering if your work will help in removing the potential deadlock? By: Richard Mudgett (rmudgett) 2016-07-19 16:39:40.086-0500 This is a different deadlock than ASTERISK-24822. That deadlock is happening in the T.38 framehook while this happens in the CNG tone detection framehook. | ||